--- a/libNet/build.gradle
+++ b/libNet/build.gradle
@@ -1,49 +1,27 @@
-plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-}
+apply from: this.rootProject.file('singleModule.gradle')
+project.ext.setAppOrLibDefaultConfig project
 
 android {
     namespace 'com.example.libnet'
-    compileSdk rootProject.android.compileSdk
 
     defaultConfig {
-        minSdk rootProject.android.minSdk
-        targetSdk rootProject.android.targetSdk
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-
         buildConfigField "String", "BASE_URL", "\"${active.baseUrl}\""
-    }
-
-    buildFeatures {
-        buildConfig true
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
 dependencies {
     implementation project(path: ':lib_base')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation rootProject.desLibs.coreKtx
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    api rootProject.desLibs.retrofit2
-    implementation rootProject.desLibs.loggingInterceptor
-    implementation rootProject.desLibs.moshiKotlin
-    implementation rootProject.desLibs.retrofitMoshi
-    api rootProject.desLibs.room
-    kapt rootProject.desLibs.roomCompiler
-    kapt rootProject.desLibs.theRouter
+    implementation libs.appcompat
+    implementation libs.material
+    implementation libs.coreKtx
+    testImplementation libs.junit
+    androidTestImplementation libs.extJunit
+    androidTestImplementation libs.espresso
+    api libs.retrofit2
+    implementation libs.loggingInterceptor
+    implementation libs.moshiKotlin
+    implementation libs.retrofitMoshi
+    api libs.room
+    kapt libs.roomCompiler
+    kapt libs.theRouter
 }
