--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -10,7 +10,8 @@ compileSdk = "33"
 coreVersion = "1.8.0"
 lifecycleVersion = "2.3.1"
 composeVersion = "1.5.1"
-junitVersion = "1.1.5"
+composeBom = "2022.10.00"
+junitTestVersion = "1.1.5"
 espressoVersion = "3.5.1"
 lottieVersion = "6.0.0"
 navVersion = "2.3.5"
@@ -24,36 +25,47 @@ activityVersion = "1.7.2"
 moshiVersion = "1.14.0"
 roomVersion = "2.5.0"
 theRouterVersion = "1.2.0-beta3"
+mmkvVersion = "1.3.0"
+junitVersion = "4.13.2"
+baseAdapterVersion = "4.0.0-beta14"
+glideComplierVersion = "4.11.0"
+glideVersion = "4.15.1"
+cardStackVersion = "2.3.4"
+leakcanaryVersion = "2.11"
+appcompatVersion = "1.6.1"
+materialVersion = "1.9.0"
 
 #依赖库
 [libraries]
+appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompatVersion" }
+material = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 coreKtx = { module = "androidx.core:core-ktx", version.ref = "coreVersion" }
 lifecycleRuntimeKtx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleVersion" }
 activityCompose = { module = "androidx.activity:activity-compose", version.ref = "composeVersion" }
-composeBom = { module = "androidx.compose:compose-bom", version.ref = "2022.10.00" }
+composeBom = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
 ui = { module = "androidx.compose.ui:ui" }
 uiGraphics = { module = "androidx.compose.ui:ui-graphics" }
 uiPreview = { module = "androidx.compose.ui:ui-tooling-preview" }
 material3 = { module = "androidx.compose.material3:material3" }
-junit = { module = "junit:junit", version.ref = "4.13.2" }
-extJunit = { module = "androidx.test.ext:junit", version.ref = "junitVersion" }
+junit = { module = "junit:junit", version.ref = "junitVersion" }
+extJunit = { module = "androidx.test.ext:junit", version.ref = "junitTestVersion" }
 espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoVersion" }
 activityKtx = { module = "androidx.activity:activity-ktx", version.ref = "activityVersion" }
 lottie = { module = "com.airbnb.android:lottie", version.ref = "lottieVersion" }
 navFrgKtx = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navVersion" }
 navUIKtx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navVersion" }
 smartRefresh = { module = "io.github.scwang90:refresh-layout-kernel", version.ref = "refreshVersion" }
-adapterHelper = { module = "io.github.cymchad:BaseRecyclerViewAdapterHelper", version.ref = "4.0.0-beta14" }
+adapterHelper = { module = "io.github.cymchad:BaseRecyclerViewAdapterHelper", version.ref = "baseAdapterVersion" }
 eventBus = { module = "org.greenrobot:eventbus", version.ref = "eventBusVersion" }
 liveDataKtx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleVersion" }
 viewModelKtx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleVersion" }
 retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 loggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp3LogVersion" }
 fragmentKtx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentVersion" }
-glideCompiler = { module = "com.github.bumptech.glide:compiler", version.ref = "4.11.0" }
-glide = { module = "com.github.bumptech.glide:glide", version.ref = "4.15.1" }
-stackView = { module = "com.yuyakaido.android:card-stack-view", version.ref = "2.3.4" }
-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "2.11" }
+glideCompiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glideComplierVersion" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glideVersion" }
+stackView = { module = "com.yuyakaido.android:card-stack-view", version.ref = "cardStackVersion" }
+leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanaryVersion" }
 moshi = { module = "com.squareup.moshi:moshi", version.ref = "moshiVersion" }
 moshiKotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiVersion" }
 retrofitMoshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofitVersion" }
@@ -61,7 +73,7 @@ room = { module = "androidx.room:room-ktx", version.ref = "roomVersion" }
 roomCompiler = { module = "androidx.room:room-compiler", version.ref = "roomVersion" }
 theRouter = { module = "cn.therouter:apt", version.ref = "theRouterVersion" }
 therouter = { module = "cn.therouter:router", version.ref = "theRouterVersion" }
-mmkv = { module = "com.tencent:mmkv", version.ref = "1.3.0" }
+mmkv = { module = "com.tencent:mmkv", version.ref = "mmkvVersion" }
 
 [bundles]
 lib_base = ["coreKtx", "lifecycleRuntimeKtx", "eventBus", "fragmentKtx", "glideCompiler",
