--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ pluginManagement {
     }
 }
 
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -16,6 +17,11 @@ dependencyResolutionManagement {
         }
         maven {
             url "https://storage.flutter-io.cn/download.flutter.io"
+        }
+    }
+    versionCatalogs {
+        libs {
+            from(files("./libs.versions.toml"))
         }
     }
 }
