--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,7 @@ dependencyResolutionManagement {
     }
     versionCatalogs {
         libs {
-            from(files("./libs.versions.toml"))
+            from(files("../gradle/libs.versions.toml"))
         }
     }
 }
