--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     api libs.moshi
     api libs.liveDataKtx
     api libs.viewModelKtx
-    kapt libs.theRouter
+    kapt libs.theRouterApt
     api libs.therouter
     compileOnly libs.mmkv
 }
