--- a/libLogin/build.gradle
+++ b/libLogin/build.gradle
@@ -15,5 +15,5 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.extJunit
     androidTestImplementation libs.espresso
-    kapt libs.theRouter
+    kapt libs.theRouterApt
 }
