--- a/lib_me/build.gradle
+++ b/lib_me/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.extJunit
     androidTestImplementation libs.espresso
-    kapt libs.theRouter
+    kapt libs.theRouterApt
     debugCompileOnly 'com.example.flutter_module:flutter_debug:1.0'
     releaseCompileOnly 'com.example.flutter_module:flutter_release:1.0'
 }
