--- a/lib_me/src/main/AndroidManifest.xml
+++ b/lib_me/src/main/AndroidManifest.xml
@@ -3,5 +3,11 @@
 
     <application>
         <activity android:name=".TestActivity" />
+        <activity
+            android:name=".MyFlutterActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density"
+            android:exported="true"
+            android:hardwareAccelerated="true"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 </manifest>
