--- a/lib_news/build.gradle
+++ b/lib_news/build.gradle
@@ -14,5 +14,5 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.extJunit
     androidTestImplementation libs.espresso
-    kapt libs.theRouter
+    kapt libs.theRouterApt
 }
