--- a/flutter_module/pubspec.yaml
+++ b/flutter_module/pubspec.yaml
@@ -38,6 +38,8 @@ flutter:
     - assets/icon.png
     - assets/image_loading.gif
     - assets/ic_launcher.png
+    - assets/img6.jpg
+    - assets/img11.jpg
 
   module:
     androidX: true
