--- a/flutter_module/pubspec.yaml
+++ b/flutter_module/pubspec.yaml
@@ -38,8 +38,7 @@ flutter:
     - assets/icon.png
     - assets/image_loading.gif
     - assets/ic_launcher.png
-    - assets/img6.jpg
-    - assets/img11.jpg
+    - assets/image/
 
   module:
     androidX: true
