--- a/settings.gradle
+++ b/settings.gradle
@@ -28,7 +28,7 @@ include ':libHome'
 include ':libSquare'
 include ':lib_me'
 include ':lib_news'
-include ':uilibrary'
+include ':uiLibrary'
 include ':libLogin'
 include ':libNet'
 include ':flutter_module'
