--- a/uiLibrary/build.gradle
+++ b/uiLibrary/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.extJunit
     androidTestImplementation libs.espresso
+    api libs.lifecycleRuntimeKtx
     api(libs.blankj)
     api libs.glide
 }
