feat: 配置常量改为build-logic配置，依赖版本更新

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,10 +22,10 @@ fragmentVersion = "1.6.0"
 activityVersion = "1.7.2"
 moshiVersion = "1.14.0"
 roomVersion = "2.5.2"
-theRouterVersion = "1.2.0-beta3"
+theRouterVersion = "1.2.0-beta4"
 mmkvVersion = "1.3.0"
 junitVersion = "4.13.2"
-baseAdapterVersion = "4.0.0-beta14"
+baseAdapterVersion = "4.0.1"
 glideComplierVersion = "4.15.1"
 glideVersion = "4.15.1"
 cardStackVersion = "2.3.4"
