--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -36,6 +36,8 @@ flutterVersion = "1.0"
 blankjVersion = "1.31.1"
 agp = "8.1.0"
 kotlin = "1.8.10"
+mavericksVersion = "3.0.6"
+epoxyVersion = "5.1.3"
 
 #依赖库
 [libraries]
@@ -73,6 +75,9 @@ mmkv = { module = "com.tencent:mmkv", version.ref = "mmkvVersion" }
 flutterDebug = { module = "com.example.flutter_module:flutter_debug", version.ref = "flutterVersion" }
 flutterRelease = { module = "com.example.flutter_module:flutter_release", version.ref = "flutterVersion" }
 blankj = { module = "com.blankj:utilcodex", version.ref = "blankjVersion" }
+airbnb-mavericks = { module = "com.airbnb.android:mavericks", version.ref = "mavericksVersion" }
+airbnb-expory = { module = "com.airbnb.android:epoxy", version.ref = "epoxyVersion" }
+# plign
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 
@@ -82,4 +87,4 @@ room = ["room", "roomCompiler"]
 [plugins]
 android-library = { id = "com.android.library", version.ref = "agp" }
 android-application = { id = "com.android.application", version.ref = "agp" }
-the_router = {id = "cn.therouter", version.ref = "theRouterVersion"}
+the_router = { id = "cn.therouter", version.ref = "theRouterVersion" }
