--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,7 @@ fragmentVersion = "1.6.0"
 activityVersion = "1.7.2"
 moshiVersion = "1.14.0"
 roomVersion = "2.5.2"
-theRouterVersion = "1.2.0-beta4"
+theRouterVersion = "1.2.0-rc1"
 mmkvVersion = "1.3.0"
 junitVersion = "4.13.2"
 baseAdapterVersion = "4.0.1"
@@ -34,10 +34,11 @@ appcompatVersion = "1.6.1"
 materialVersion = "1.9.0"
 flutterVersion = "1.0"
 blankjVersion = "1.31.1"
-agp = "8.1.0"
+agpVersion = "8.1.0"
 kotlin = "1.8.10"
 mavericksVersion = "3.0.6"
 epoxyVersion = "5.1.3"
+kspVersion = "1.8.10-1.0.9"
 
 #依赖库
 [libraries]
@@ -60,7 +61,7 @@ viewModelKtx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.
 retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 loggingInterceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp3LogVersion" }
 fragmentKtx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragmentVersion" }
-glideCompiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glideComplierVersion" }
+glideCompiler = { module = "com.github.bumptech.glide:ksp", version.ref = "glideComplierVersion" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glideVersion" }
 stackView = { module = "com.yuyakaido.android:card-stack-view", version.ref = "cardStackVersion" }
 leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version.ref = "leakcanaryVersion" }
@@ -77,14 +78,15 @@ flutterRelease = { module = "com.example.flutter_module:flutter_release", versio
 blankj = { module = "com.blankj:utilcodex", version.ref = "blankjVersion" }
 airbnb-mavericks = { module = "com.airbnb.android:mavericks", version.ref = "mavericksVersion" }
 airbnb-expory = { module = "com.airbnb.android:epoxy", version.ref = "epoxyVersion" }
-# plign
-android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agpVersion" }
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 
 [bundles]
 room = ["room", "roomCompiler"]
 
 [plugins]
-android-library = { id = "com.android.library", version.ref = "agp" }
-android-application = { id = "com.android.application", version.ref = "agp" }
-the_router = { id = "cn.therouter", version.ref = "theRouterVersion" }
+android-library = { id = "com.android.library", version.ref = "agpVersion" }
+android-application = { id = "com.android.application", version.ref = "agpVersion" }
+the_router = { id = "cn.therouter.agp8", version.ref = "theRouterVersion" }
+kotlin_android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+google_ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
