--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
@@ -20,27 +20,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DemoApplication"
         tools:targetApi="31">
+
         <activity
-            android:name=".SplashActivity"
+            android:name=".NewMainActivity"
             android:exported="true"
-            android:theme="@style/Theme.SplashActivity">
+            android:launchMode="singleTask"
+            android:theme="@style/Theme.Splash"
+            android:windowSoftInputMode="adjustPan">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan" />
-
-        <activity
-            android:name=".NewMainActivity"
             android:exported="true"
             android:launchMode="singleTask"
             android:windowSoftInputMode="adjustPan" />
@@ -51,7 +47,5 @@
             android:exported="true"
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize" />
-
     </application>
-
 </manifest>
