--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ kotlin = "1.8.10"
 mavericksVersion = "3.0.6"
 epoxyVersion = "5.1.3"
 kspVersion = "1.8.10-1.0.9"
+splashScreenVersion = "1.0.0"
 
 #依赖库
 [libraries]
@@ -80,6 +81,7 @@ airbnb-mavericks = { module = "com.airbnb.android:mavericks", version.ref = "mav
 airbnb-expory = { module = "com.airbnb.android:epoxy", version.ref = "epoxyVersion" }
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agpVersion" }
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+androidx-splash-screen = { module = "androidx.core:core-splashscreen", version.ref = "splashScreenVersion" }
 
 
 [bundles]
