--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,8 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".NewMainActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:launchMode="singleTask"
             android:theme="@style/Theme.Splash"
             android:windowSoftInputMode="adjustPan">
 
@@ -35,11 +34,7 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".WelcomeActivity"></activity>
 
         <activity
             android:name=".MyFlutterActivity"
