--- a/libHome/src/main/AndroidManifest.xml
+++ b/libHome/src/main/AndroidManifest.xml
@@ -19,9 +19,10 @@
         <activity android:name="com.example.libHome.room.RoomActivity" />
         <activity android:name="com.example.libHome.intentSetting.IntentSettingActivity" />
         <activity android:name="com.example.libHome.calendar.CalendarRemindActivity" />
-        <activity android:name="com.example.libHome.span.ReplacementSpanActivity"/>
-        <activity android:name="com.example.libHome.mavericks.MavericksActivity"/>
-        <activity android:name="com.example.libHome.epoxy.EpoxyActivity"/>
-        <activity android:name="com.example.libHome.ui.DemoActivity"/>
+        <activity android:name="com.example.libHome.span.ReplacementSpanActivity" />
+        <activity android:name="com.example.libHome.mavericks.MavericksActivity" />
+        <activity android:name="com.example.libHome.epoxy.EpoxyActivity" />
+        <activity android:name="com.example.libHome.ui.DemoActivity" />
+        <activity android:name="com.example.libHome.sliding.SlidingDemoActivity" />
     </application>
 </manifest>
