--- a/lib_news/src/main/AndroidManifest.xml
+++ b/lib_news/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
-        <activity android:name=".fragment.ObjectAnimFragment" />
-        <activity android:name=".fragment.ScrollTextViewActivity"/>
+        <activity android:name=".activity.ObjectAnimActivity" />
+        <activity android:name=".activity.ScrollTextViewActivity"/>
     </application>
 </manifest>
