--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ fragmentVersion = "1.6.0"
 activityVersion = "1.7.2"
 moshiVersion = "1.14.0"
 roomVersion = "2.5.2"
-theRouterVersion = "1.2.0-rc1"
+theRouterVersion = "1.2.0-rc2"
 mmkvVersion = "1.3.0"
 junitVersion = "4.13.2"
 baseAdapterVersion = "4.0.1"
@@ -52,6 +52,7 @@ espresso = { module = "androidx.test.espresso:espresso-core", version.ref = "esp
 activityKtx = { module = "androidx.activity:activity-ktx", version.ref = "activityVersion" }
 lottie = { module = "com.airbnb.android:lottie", version.ref = "lottieVersion" }
 smartRefresh = { module = "io.github.scwang90:refresh-layout-kernel", version.ref = "refreshVersion" }
+smartRefresh-falsify = { module = "io.github.scwang90:refresh-header-falsify", version.ref = "refreshVersion" }
 adapterHelper = { module = "io.github.cymchad:BaseRecyclerViewAdapterHelper", version.ref = "baseAdapterVersion" }
 eventBus = { module = "org.greenrobot:eventbus", version.ref = "eventBusVersion" }
 liveDataKtx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleVersion" }
@@ -79,6 +80,7 @@ android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", ver
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 androidx-splash-screen = { module = "androidx.core:core-splashscreen", version.ref = "splashScreenVersion" }
 floatingX = {module = "com.github.Petterpx:FloatingX", version.ref = "floatingXVersion"}
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version = "2.8.1" }
 
 
 [bundles]
