--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -82,7 +82,7 @@ androidx-splash-screen = { module = "androidx.core:core-splashscreen", version.r
 floatingX = {module = "com.github.Petterpx:FloatingX", version.ref = "floatingXVersion"}
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version = "2.8.1" }
 sliding = { module = "com.github.lanweixiansen:MySliding", version = "1.0.0" }
-
+flexbox = {module = "com.google.android.flexbox:flexbox", version = "3.0.0"}
 
 [bundles]
 room = ["room", "roomCompiler"]
