--- a/lib_news/src/main/AndroidManifest.xml
+++ b/lib_news/src/main/AndroidManifest.xml
@@ -5,5 +5,6 @@
         <activity android:name=".activity.ObjectAnimActivity" />
         <activity android:name=".activity.ScrollTextViewActivity"/>
         <activity android:name=".activity.WxEmojiActivity"/>
+        <activity android:name=".activity.WyManagerActivity"/>
     </application>
 </manifest>
