--- a/lib_news/src/main/AndroidManifest.xml
+++ b/lib_news/src/main/AndroidManifest.xml
@@ -6,5 +6,6 @@
         <activity android:name=".activity.ScrollTextViewActivity"/>
         <activity android:name=".activity.WxEmojiActivity"/>
         <activity android:name=".activity.WyManagerActivity"/>
+        <activity android:name=".activity.HuYaScreenActivity"/>
     </application>
 </manifest>
