--- a/libHome/src/main/AndroidManifest.xml
+++ b/libHome/src/main/AndroidManifest.xml
@@ -25,5 +25,6 @@
         <activity android:name="com.example.libHome.ui.DemoActivity" />
         <activity android:name="com.example.libHome.sliding.SlidingDemoActivity" />
         <activity android:name="com.example.libHome.workmanager.WorkManagerActivity" />
+        <activity android:name="com.example.libHome.ui.d3.D3ManagerActivity"/>
     </application>
 </manifest>
